Step 2 Index Page section footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="nav__header">
                 <h1 class="nav__header-title extra-bold">Réservez le menu qui vous convient</h1>
                 <p class="nav__header-paragraph">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                <a class="nav__header-btn medium">Explorez nos restaurants</a>
+                <a class="nav__header-btn medium" href="#resto-anchor">Explorez nos restaurants</a>
             </div>
 
             <div class="nav__function">
@@ -55,5 +55,94 @@
                 </div>
             </div>
         </nav>
+
+        <section class="resto" id="resto-anchor">
+            <h2 class="resto__title extra-bold">Restaurants</h2>
+
+            <ul class="resto__list">
+                <li class="card">
+                    <a class="card__link" href="#">
+                        <img class="card__link-img" src="img/resto/palette-du-gout.jpg" alt="palette-du-gout-img" />
+                        <div class="card__link-info">
+                            <div class="card__link-info-text">
+                                <h3 class="card__link-info-text-title extra-bold">La palette du goût</h3>
+                                <p class="card__link-info-text-location">Ménilmontant</p>
+                            </div>
+                            <i class="card__link-info-heart far fa-heart"><i class="card__link-info-heart--inside fas fa-heart"></i></i>
+                        </div>
+                        <div class="card__link-new">
+                            <h4>Nouveau</h4>
+                        </div>
+                    </a>
+                </li>
+                <li class="card">
+                    <a class="card__link" href="#">
+                        <img class="card__link-img" src="img/resto/note-enchantee.jpg" alt="note-enchantee-img" />
+                        <div class="card__link-info">
+                            <div class="card__link-info-text">
+                                <h3 class="card__link-info-text-title extra-bold">La note enchantée</h3>
+                                <p class="card__link-info-text-location">Charonne</p>
+                            </div>
+                            <i class="card__link-info-heart far fa-heart"><i class="card__link-info-heart--inside fas fa-heart"></i></i>
+                        </div>
+                        <div class="card__link-new">
+                            <h4>Nouveau</h4>
+                        </div>
+                    </a>
+                </li>
+                <li class="card">
+                    <a class="card__link" href="#">
+                        <img class="card__link-img" src="img/resto/a-la-francaise.jpg" alt="a-la-francaise-img" />
+                        <div class="card__link-info">
+                            <div class="card__link-info-text">
+                                <h3 class="card__link-info-text-title extra-bold">À la française</h3>
+                                <p class="card__link-info-text-location">Cité Rouge</p>
+                            </div>
+                            <i class="card__link-info-heart far fa-heart"><i class="card__link-info-heart--inside fas fa-heart"></i></i>
+                        </div>
+                    </a>
+                </li>
+                <li class="card">
+                    <a class="card__link" href="#">
+                        <img class="card__link-img" src="img/resto/le-delice-des-sens.jpg" alt="le-delice-des-sens-img" />
+                        <div class="card__link-info">
+                            <div class="card__link-info-text">
+                                <h3 class="card__link-info-text-title extra-bold">Le délice des sens</h3>
+                                <p class="card__link-info-text-location">Folie-Méricourt</p>
+                            </div>
+                            <i class="card__link-info-heart far fa-heart"><i class="card__link-info-heart--inside fas fa-heart"></i></i>
+                            </div>
+                    </a>
+                </li>
+            </ul>
+        </section>
+
+        <footer class="footer">
+            <img class="footer__logo" src="img/logo/logo-white.svg" alt="logo-ohmyfood" />
+            <ul class="footer__list">
+                <li>
+                    <a class="footer__list-link medium" href="#">
+                        <i class="footer__list-link-icon fas fa-utensils"></i>
+                        <span>Proposer un restaurant</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="footer__list-link medium" href="#">
+                        <i class="footer__list-link-icon fas fa-hands-helping"></i>
+                        <span>Devenir partenaire</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="footer__list-link" href="#">
+                        <span>Mentions légales</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="footer__list-link" href="#">
+                        <span>Contact</span>
+                    </a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
