Heart transition, new police

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;800&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
 
         <script src="https://kit.fontawesome.com/ac9039d588.js" crossorigin="anonymous"></script>
 
@@ -50,7 +52,7 @@
 
                 <div class="nav__function-info nav__function-info--darken">
                     <h3 class="nav__function-info-circle">3</h3>
-                    <i class="nav__function-info-icon nav__function-info-icon--purple fas fa-store"></i>
+                    <i class="nav__function-info-icon nav__function-info-icon--primary fas fa-store"></i>
                     <p class="nav__function-info-text bold">Dégustez au restaurant</p>
                 </div>
             </div>
@@ -68,12 +70,15 @@
                                 <h3 class="card__link-info-text-title extra-bold">La palette du goût</h3>
                                 <p class="card__link-info-text-location">Ménilmontant</p>
                             </div>
-                            <i class="card__link-info-heart far fa-heart"><i class="card__link-info-heart--inside fas fa-heart"></i></i>
                         </div>
                         <div class="card__link-new">
                             <h4>Nouveau</h4>
                         </div>
                     </a>
+                    <div class="card__heart">
+                        <i class="card__heart--outside far fa-heart"></i>
+                        <i class="card__heart--inside fas fa-heart"></i>
+                    </div>
                 </li>
                 <li class="card">
                     <a class="card__link" href="#">
@@ -83,12 +88,15 @@
                                 <h3 class="card__link-info-text-title extra-bold">La note enchantée</h3>
                                 <p class="card__link-info-text-location">Charonne</p>
                             </div>
-                            <i class="card__link-info-heart far fa-heart"><i class="card__link-info-heart--inside fas fa-heart"></i></i>
                         </div>
                         <div class="card__link-new">
                             <h4>Nouveau</h4>
                         </div>
                     </a>
+                    <div class="card__heart">
+                        <i class="card__heart--outside far fa-heart"></i>
+                        <i class="card__heart--inside fas fa-heart"></i>
+                    </div>
                 </li>
                 <li class="card">
                     <a class="card__link" href="#">
@@ -98,9 +106,12 @@
                                 <h3 class="card__link-info-text-title extra-bold">À la française</h3>
                                 <p class="card__link-info-text-location">Cité Rouge</p>
                             </div>
-                            <i class="card__link-info-heart far fa-heart"><i class="card__link-info-heart--inside fas fa-heart"></i></i>
                         </div>
                     </a>
+                    <div class="card__heart">
+                        <i class="card__heart--outside far fa-heart"></i>
+                        <i class="card__heart--inside fas fa-heart"></i>
+                    </div>
                 </li>
                 <li class="card">
                     <a class="card__link" href="#">
@@ -110,9 +121,12 @@
                                 <h3 class="card__link-info-text-title extra-bold">Le délice des sens</h3>
                                 <p class="card__link-info-text-location">Folie-Méricourt</p>
                             </div>
-                            <i class="card__link-info-heart far fa-heart"><i class="card__link-info-heart--inside fas fa-heart"></i></i>
-                            </div>
+                        </div>
                     </a>
+                    <div class="card__heart">
+                        <i class="card__heart--outside far fa-heart"></i>
+                        <i class="card__heart--inside fas fa-heart"></i>
+                    </div>
                 </li>
             </ul>
         </section>
