Menu page 1, animation shop-cards

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="nav__header">
                 <h1 class="nav__header-title extra-bold">Réservez le menu qui vous convient</h1>
                 <p class="nav__header-paragraph">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                <a class="nav__header-btn medium" href="#resto-anchor">Explorez nos restaurants</a>
+                <a class="btn medium" href="#resto-anchor">Explorez nos restaurants</a>
             </div>
 
             <div class="nav__function">
@@ -63,7 +63,7 @@
 
             <ul class="resto__list">
                 <li class="card">
-                    <a class="card__link" href="#">
+                    <a class="card__link" href="menu-laPaletteDuGout.html">
                         <img class="card__link-img" src="img/resto/palette-du-gout.jpg" alt="palette-du-gout-img" />
                         <div class="card__link-info">
                             <div class="card__link-info-text">
@@ -75,9 +75,9 @@
                             <h4>Nouveau</h4>
                         </div>
                     </a>
-                    <div class="card__heart">
-                        <i class="card__heart--outside far fa-heart"></i>
-                        <i class="card__heart--inside fas fa-heart"></i>
+                    <div class="heart">
+                        <i class="heart-outside far fa-heart"></i>
+                        <i class="heart-inside fas fa-heart"></i>
                     </div>
                 </li>
                 <li class="card">
@@ -93,9 +93,9 @@
                             <h4>Nouveau</h4>
                         </div>
                     </a>
-                    <div class="card__heart">
-                        <i class="card__heart--outside far fa-heart"></i>
-                        <i class="card__heart--inside fas fa-heart"></i>
+                    <div class="heart">
+                        <i class="heart-outside far fa-heart"></i>
+                        <i class="heart-inside fas fa-heart"></i>
                     </div>
                 </li>
                 <li class="card">
@@ -108,9 +108,9 @@
                             </div>
                         </div>
                     </a>
-                    <div class="card__heart">
-                        <i class="card__heart--outside far fa-heart"></i>
-                        <i class="card__heart--inside fas fa-heart"></i>
+                    <div class="heart">
+                        <i class="heart-outside far fa-heart"></i>
+                        <i class="heart-inside fas fa-heart"></i>
                     </div>
                 </li>
                 <li class="card">
@@ -123,9 +123,9 @@
                             </div>
                         </div>
                     </a>
-                    <div class="card__heart">
-                        <i class="card__heart--outside far fa-heart"></i>
-                        <i class="card__heart--inside fas fa-heart"></i>
+                    <div class="heart">
+                        <i class="heart-outside far fa-heart"></i>
+                        <i class="heart-inside fas fa-heart"></i>
                     </div>
                 </li>
             </ul>
