--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                 </li>
                 <li class="card">
-                    <a class="card__link" href="#">
+                    <a class="card__link" href="menu-laNoteEnchantee.html">
                         <img class="card__link-img" src="img/resto/note-enchantee.jpg" alt="note-enchantee-img" />
                         <div class="card__link-info">
                             <div class="card__link-info-text">
@@ -99,7 +99,7 @@
                     </div>
                 </li>
                 <li class="card">
-                    <a class="card__link" href="#">
+                    <a class="card__link" href="menu-aLaFrancaise.html">
                         <img class="card__link-img" src="img/resto/a-la-francaise.jpg" alt="a-la-francaise-img" />
                         <div class="card__link-info">
                             <div class="card__link-info-text">
@@ -114,7 +114,7 @@
                     </div>
                 </li>
                 <li class="card">
-                    <a class="card__link" href="#">
+                    <a class="card__link" href="menu-leDeliceDesSens.html">
                         <img class="card__link-img" src="img/resto/le-delice-des-sens.jpg" alt="le-delice-des-sens-img" />
                         <div class="card__link-info">
                             <div class="card__link-info-text">
