Loading spinner and menu display animations

--- a/menu-laNoteEnchantee.html
+++ b/menu-laNoteEnchantee.html
@@ -27,13 +27,13 @@
         </header>
 
         <section class="menu">
-            <img class="menu__img" src="img/resto/palette-du-gout.jpg" alt="palette-du-gout-img" />
+            <img class="menu__img" src="img/resto/note-enchantee.jpg" alt="palette-du-gout-img" />
             <div class="menu__shop">
                 <div class="shop-title">
                     <h1 class="shop-title__text">La note enchantée</h1>
                     <div class="heart heart--menu">
-                        <i class="heart-outside far fa-heart"></i>
-                        <i class="heart-inside fas fa-heart"></i>
+                        <i class="heart__outside far fa-heart"></i>
+                        <i class="heart__inside fas fa-heart"></i>
                     </div>
                 </div>
                 <div class="shop-group">
