--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -32,8 +32,8 @@
                 <div class="shop-title">
                     <h1 class="shop-title__text">La palette du goût</h1>
                     <div class="heart heart--menu">
-                        <i class="heart-outside far fa-heart"></i>
-                        <i class="heart-inside fas fa-heart"></i>
+                        <i class="heart__outside far fa-heart"></i>
+                        <i class="heart__inside fas fa-heart"></i>
                     </div>
                 </div>
                 <div class="shop-group">
