--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
 
-    <body>
+    <body class="body-fade-in">
+
+        <div class="loading">
+            <img class="loading__spinner" alt="loading-spinner" src="img/logo/loading-spinner.png" />
+        </div>
 
         <header class="header">
             <img class="header__logo" src="img/logo/logo.svg" alt="logo-ohmyfood" />
@@ -72,12 +76,12 @@
                             </div>
                         </div>
                         <div class="card__link-new">
-                            <h4>Nouveau</h4>
+                            <h4 class="card__link-new-text">Nouveau</h4>
                         </div>
                     </a>
                     <div class="heart">
-                        <i class="heart-outside far fa-heart"></i>
-                        <i class="heart-inside fas fa-heart"></i>
+                        <i class="heart__outside far fa-heart"></i>
+                        <i class="heart__inside fas fa-heart"></i>
                     </div>
                 </li>
                 <li class="card">
@@ -90,12 +94,12 @@
                             </div>
                         </div>
                         <div class="card__link-new">
-                            <h4>Nouveau</h4>
+                            <h4 class="card__link-new-text">Nouveau</h4>
                         </div>
                     </a>
                     <div class="heart">
-                        <i class="heart-outside far fa-heart"></i>
-                        <i class="heart-inside fas fa-heart"></i>
+                        <i class="heart__outside far fa-heart"></i>
+                        <i class="heart__inside fas fa-heart"></i>
                     </div>
                 </li>
                 <li class="card">
@@ -109,8 +113,8 @@
                         </div>
                     </a>
                     <div class="heart">
-                        <i class="heart-outside far fa-heart"></i>
-                        <i class="heart-inside fas fa-heart"></i>
+                        <i class="heart__outside far fa-heart"></i>
+                        <i class="heart__inside fas fa-heart"></i>
                     </div>
                 </li>
                 <li class="card">
@@ -124,8 +128,8 @@
                         </div>
                     </a>
                     <div class="heart">
-                        <i class="heart-outside far fa-heart"></i>
-                        <i class="heart-inside fas fa-heart"></i>
+                        <i class="heart__outside far fa-heart"></i>
+                        <i class="heart__inside fas fa-heart"></i>
                     </div>
                 </li>
             </ul>
@@ -152,7 +156,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="footer__list-link" href="#">
+                    <a class="footer__list-link" href="mailto:123@gmail.com">
                         <span>Contact</span>
                     </a>
                 </li>
